fix: error when no content response